[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.12.0",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "fb_regular: marks regular tests for FeatureBased functions",
    "fb_opt: marks optimizer tests for FeatureBased functions",
    "clustered_mode: marks tests which are supported only by functions that can work in clustered mode",
    "sc_regular: marks regular tests for SetCover functions",
    "sc_opt: marks optimizer tests for SetCover functions",
    "psc_regular: marks regular tests for ProbabilisticSetCover functions",
    "psc_opt: marks optimizer tests for ProbabilisticSetCover functions",
    "opt_regular: marks regular optimizer tests for functions listed in optimizerTests list",
    "regular: marks regular tests for functions listed in allKernelFunctions list",
    "mi_regular: marks regular tests for functions listed in allKernelMIFunctions list",
    "mi_opt_regular: marks regular optimizer tests for functions listed in optimizerMITests list",
    "psc_mi_regular: for regular tests of PSC MI and CG functions",
    "psc_mi_opt: for optimizer tests of PSC MI and CG functions",
    "sc_mi_opt: for optimizer tests of SC MI and CG functions",
    "sc_mi_regular: for regular tests of SC MI and CG functions",
    "cmi_regular: for regular tests for CMI functions",
    "cmi_opt_regular: for optimizer tests for CMI functions",
    "sc_cmi_regular: for regular tests of SC CMI",
    "sc_cmi_opt: for optimizer tests of SC CMI",
    "psc_cmi_regular: for regular tests of PSC CMI",
    "psc_cmi_opt: for optimizer tests of PSC CMI",
    "cpp_kernel_cpp: for testing cpp kernel created in cpp",
    "pybind_test: for testing different pybind alternatives",
    "single: mark any specific tests using this marker"
]

[project]
name = "submod-demo"
version = "1.0.1"

description = "SubModLib is an easy-to-use, efficient and scalable Python library for submodular optimization with a C++ optimization engine. Submodlib finds its application in summarization, data subset selection, hyper parameter tuning, efficient training etc. Through a rich API, it offers a great deal of flexibility in the way it can be used."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.24.4",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "pandas",
    "joblib",
]

